Fix checkboxes not showing on Chrome

--- a/_includes/css/open-jordan.css
+++ b/_includes/css/open-jordan.css
@@ -362,3 +362,7 @@ label {
 ul.ss-choices {
     padding: 2em 1em;
 }
+
+form input[type="checkbox"] {
+    width: auto;
+}
